--- a/Home_Sales.ipynb
+++ b/Home_Sales.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -10,7 +10,19 @@
     "id": "a_KW73O2e3dw",
     "outputId": "fa5fd2b3-e2de-491b-ee1c-405317ba7ebc"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'findspark'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_5944\\1749719005.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Import findspark and initialize.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mfindspark\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mfindspark\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'findspark'"
+     ]
+    }
+   ],
    "source": [
     "# Import findspark and initialize. \n",
     "import findspark\n",
@@ -28,6 +40,7 @@
     "# Import packages\n",
     "from pyspark.sql import SparkSession\n",
     "import time\n",
+    "import pandas as pd\n",
     "\n",
     "# Create a SparkSession\n",
     "spark = SparkSession.builder.appName(\"SparkSQL\").getOrCreate()"
@@ -48,7 +61,9 @@
     "# 1. Read in the AWS S3 bucket into a DataFrame.\n",
     "from pyspark import SparkFiles\n",
     "url = \"https://2u-data-curriculum-team.s3.amazonaws.com/dataviz-classroom/v1.2/22-big-data/home_sales_revised.csv\"\n",
-    "\n"
+    "spark.sparkContext.addFile(url)\n",
+    "home_sales = spark.read.csv(SparkFiles.get(\"home_sales_revised.csv\"), sep=\",\", header=True)\n",
+    "home_sales.show()"
    ]
   },
   {
@@ -303,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.13"
   },
   "nteract": {
    "version": "0.28.0"
