--- a/Home_Sales.ipynb
+++ b/Home_Sales.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -10,21 +10,7 @@
     "id": "a_KW73O2e3dw",
     "outputId": "fa5fd2b3-e2de-491b-ee1c-405317ba7ebc"
    },
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Couldn't find Spark, make sure SPARK_HOME env is set or Spark is in an expected location (e.g. from homebrew installation).",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_10524\\1749719005.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Import findspark and initialize.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mfindspark\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mfindspark\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\findspark.py\u001b[0m in \u001b[0;36minit\u001b[1;34m(spark_home, python_path, edit_rc, edit_profile)\u001b[0m\n\u001b[0;32m    141\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    142\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mspark_home\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 143\u001b[1;33m         \u001b[0mspark_home\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    144\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    145\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mpython_path\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\findspark.py\u001b[0m in \u001b[0;36mfind\u001b[1;34m()\u001b[0m\n\u001b[0;32m     44\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     45\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mspark_home\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 46\u001b[1;33m         raise ValueError(\n\u001b[0m\u001b[0;32m     47\u001b[0m             \u001b[1;34m\"Couldn't find Spark, make sure SPARK_HOME env is set\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     48\u001b[0m             \u001b[1;34m\" or Spark is in an expected location (e.g. from homebrew installation).\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: Couldn't find Spark, make sure SPARK_HOME env is set or Spark is in an expected location (e.g. from homebrew installation)."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import findspark and initialize. \n",
     "import findspark\n",
@@ -33,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "2XbWNf1Te5fM"
    },
@@ -42,7 +28,6 @@
     "# Import packages\n",
     "from pyspark.sql import SparkSession\n",
     "import time\n",
-    "import pandas as pd\n",
     "\n",
     "# Create a SparkSession\n",
     "spark = SparkSession.builder.appName(\"SparkSQL\").getOrCreate()"
@@ -50,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -58,31 +43,63 @@
     "id": "wOJqxG_RPSwp",
     "outputId": "7857ef9f-5b04-405d-f5aa-e535dfe7870c"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+----------+----------+------+--------+---------+-----------+--------+------+----------+----+\n",
+      "|                  id|      date|date_built| price|bedrooms|bathrooms|sqft_living|sqft_lot|floors|waterfront|view|\n",
+      "+--------------------+----------+----------+------+--------+---------+-----------+--------+------+----------+----+\n",
+      "|f8a53099-ba1c-47d...|2022-04-08|      2016|936923|       4|        3|       3167|   11733|     2|         1|  76|\n",
+      "|7530a2d8-1ae3-451...|2021-06-13|      2013|379628|       2|        2|       2235|   14384|     1|         0|  23|\n",
+      "|43de979c-0bf0-4c9...|2019-04-12|      2014|417866|       2|        2|       2127|   10575|     2|         0|   0|\n",
+      "|b672c137-b88c-48b...|2019-10-16|      2016|239895|       2|        2|       1631|   11149|     2|         0|   0|\n",
+      "|e0726d4d-d595-407...|2022-01-08|      2017|424418|       3|        2|       2249|   13878|     2|         0|   4|\n",
+      "|5aa00529-0533-46b...|2019-01-30|      2017|218712|       2|        3|       1965|   14375|     2|         0|   7|\n",
+      "|131492a1-72e2-4a8...|2020-02-08|      2017|419199|       2|        3|       2062|    8876|     2|         0|   6|\n",
+      "|8d54a71b-c520-44e...|2019-07-21|      2010|323956|       2|        3|       1506|   11816|     1|         0|  25|\n",
+      "|e81aacfe-17fe-46b...|2020-06-16|      2016|181925|       3|        3|       2137|   11709|     2|         0|  22|\n",
+      "|2ed8d509-7372-46d...|2021-08-06|      2015|258710|       3|        3|       1918|    9666|     1|         0|  25|\n",
+      "|f876d86f-3c9f-42b...|2019-02-27|      2011|167864|       3|        3|       2471|   13924|     2|         0|  15|\n",
+      "|0a2bd445-8508-4d8...|2021-12-30|      2014|337527|       2|        3|       1926|   12556|     1|         0|  23|\n",
+      "|941bad30-eb49-4a7...|2020-05-09|      2015|229896|       3|        3|       2197|    8641|     1|         0|   3|\n",
+      "|dd61eb34-6589-4c0...|2021-07-25|      2016|210247|       3|        2|       1672|   11986|     2|         0|  28|\n",
+      "|f1e4cef7-d151-439...|2019-02-01|      2011|398667|       2|        3|       2331|   11356|     1|         0|   7|\n",
+      "|ea620c7b-c2f7-4c6...|2021-05-31|      2011|437958|       3|        3|       2356|   11052|     1|         0|  26|\n",
+      "|f233cb41-6f33-4b0...|2021-07-18|      2016|437375|       4|        3|       1704|   11721|     2|         0|  34|\n",
+      "|c797ca12-52cd-4b1...|2019-06-08|      2015|288650|       2|        3|       2100|   10419|     2|         0|   7|\n",
+      "|0cfe57f3-28c2-472...|2019-10-04|      2015|308313|       3|        3|       1960|    9453|     2|         0|   2|\n",
+      "|4566cd2a-ac6e-435...|2019-07-15|      2016|177541|       3|        3|       2130|   10517|     2|         0|  25|\n",
+      "+--------------------+----------+----------+------+--------+---------+-----------+--------+------+----------+----+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. Read in the AWS S3 bucket into a DataFrame.\n",
     "from pyspark import SparkFiles\n",
     "url = \"https://2u-data-curriculum-team.s3.amazonaws.com/dataviz-classroom/v1.2/22-big-data/home_sales_revised.csv\"\n",
-    "spark.sparkContext.addFile(url)\n",
-    "home_sales = spark.read.csv(SparkFiles.get(\"home_sales_revised.csv\"), sep=\",\", header=True)\n",
-    "home_sales.show()"
+    "data = spark.read.csv(\"home_sales_revised.csv\", sep = \",\", header = True)\n",
+    "data.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "RoljcJ7WPpnm"
    },
    "outputs": [],
    "source": [
     "# 2. Create a temporary view of the DataFrame.\n",
-    "\n"
+    "data.createOrReplaceTempView('home_sale')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -90,15 +107,37 @@
     "id": "L6fkwOeOmqvq",
     "outputId": "bdded620-79c4-488d-c7a5-91c6799c419e"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+---------+\n",
+      "|date_built|avg_price|\n",
+      "+----------+---------+\n",
+      "|      2016|296050.24|\n",
+      "|      2012|298233.42|\n",
+      "|      2017|296576.69|\n",
+      "|      2014|299073.89|\n",
+      "|      2013|299999.39|\n",
+      "|      2011| 302141.9|\n",
+      "|      2015|307908.86|\n",
+      "|      2010|296800.75|\n",
+      "+----------+---------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. What is the average price for a four bedroom house sold in each year rounded to two decimal places?\n",
-    "\n"
+    "from pyspark.sql.functions import avg, round\n",
+    "avgPrice = home_sales.filter(home_sales[\"bedrooms\"]==4)\n",
+    "avgPrice = avgPrice.groupBy(\"date_built\").agg(round(avg(\"price\"), 2).alias(\"avg_price\")).show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -106,15 +145,36 @@
     "id": "l8p_tUS8h8it",
     "outputId": "65806e5f-6262-41c0-ff65-5107464e5c4d"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+---------+\n",
+      "|date_built|avg_price|\n",
+      "+----------+---------+\n",
+      "|      2016|290555.07|\n",
+      "|      2012|293683.19|\n",
+      "|      2017|292676.79|\n",
+      "|      2014|290852.27|\n",
+      "|      2013|295962.27|\n",
+      "|      2011|291117.47|\n",
+      "|      2015| 288770.3|\n",
+      "|      2010|292859.62|\n",
+      "+----------+---------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. What is the average price of a home for each year the home was built that have 3 bedrooms and 3 bathrooms rounded to two decimal places?\n",
-    "\n"
+    "avgPrice = home_sales.filter((home_sales[\"bedrooms\"]==3) & (home_sales[\"bathrooms\"]==3))\n",
+    "avgPrice.groupBy(\"date_built\").agg(round(avg(\"price\"), 2).alias(\"avg_price\")).show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -122,11 +182,32 @@
     "id": "Y-Eytz64liDU",
     "outputId": "17119810-56ad-40c3-de5e-c3db57e43bcc"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+---------+\n",
+      "|date_built|avg_price|\n",
+      "+----------+---------+\n",
+      "|      2016| 293965.1|\n",
+      "|      2012|307539.97|\n",
+      "|      2017|280317.58|\n",
+      "|      2014|298264.72|\n",
+      "|      2013|303676.79|\n",
+      "|      2011|276553.81|\n",
+      "|      2015|297609.97|\n",
+      "|      2010|285010.22|\n",
+      "+----------+---------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#  5. What is the average price of a home for each year built that have 3 bedrooms, 3 bathrooms, with two floors,\n",
     "# and are greater than or equal to 2,000 square feet rounded to two decimal places?\n",
-    "\n"
+    "avgPrice = home_sales.filter((home_sales[\"bedrooms\"]==3) & (home_sales[\"bathrooms\"]==3) & (home_sales[\"floors\"]==2) & (home_sales[\"sqft_living\"]>1999))\n",
+    "avgPrice.groupBy(\"date_built\").agg(round(avg(\"price\"), 2).alias(\"avg_price\")).show()"
    ]
   },
   {
